[FIX] - fixed z-index header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,6 +313,7 @@ button.lined{
 }
 
 header {
+    z-index : 100;
     max-width: 100%;
     width: 95%;
     margin: 0;
